[metadata]
name = es_client
description = "Elasticsearch Client builder, complete with schema validation, and AWS boto-based authentication"
long_description = file: README.rst
version = attr: es_client.__version__
author = Aaron Mildenstein
author_email = aaron@mildensteins.com
url = http://github.com/untergeek/es_client
license = Apache License, Version 2.0
keywords = elasticsearch
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
packages = es_client
include_package_data = True
install_requires =
    setuptools>=30.3.0
    elasticsearch>=6.2.0
    requests_aws4auth
    boto3
    pyyaml>=3.12
    certifi>=2018.1.18
    voluptuous>=0.11.1

tests_require = 
    mock
    nose
    coverage
    nosexcover

[bdist_wheel]
universal=1
