[metadata]
name = es_client
description = "Elasticsearch Client builder, complete with schema validation, and AWS boto-based authentication"
long_description = file: README.rst
version = attr: es_client.__version__
author = Aaron Mildenstein
author_email = aaron@mildensteins.com
url = http://github.com/untergeek/es_client
license = Apache License, Version 2.0
keywords = elasticsearch
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = es_client
include_package_data = True
install_requires =
    setuptools>=65.1.0
    elasticsearch8==8.3.3
    pyyaml==6.0.0
    certifi>=2022.6.15
    voluptuous>=0.13.1
    six>=1.16.0

tests_require =
    mock
    pytest

[bdist_wheel]
universal=1
