[metadata]
name = es_client
description = "Elasticsearch Client builder, complete with schema validation"
long_description = file: README.rst
version = attr: es_client.__version__
author = Aaron Mildenstein
author_email = aaron@mildensteins.com
url = http://github.com/untergeek/es_client
project_urls =
    Bug Tracker = https://github.com/untergeek/es_client/issues
    Documentation = https://es-client.readthedocs.io/
    Source Code = http://github.com/untergeek/es_client
    Release Notes = https://github.com/untergeek/es_client/releases
license = Apache License, Version 2.0
keywords = elasticsearch
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = es_client
include_package_data = True
install_requires =
    elasticsearch8==8.6.0
    pyyaml==6.0.0
    click==8.1.3
    certifi>=2022.12.7
    voluptuous>=0.13.1
    six>=1.16.0
setup_requires =
    elasticsearch8==8.6.0
    pyyaml==6.0.0
    click==8.1.3
    voluptuous>=0.13.1
    certifi>=2022.12.7
    six>=1.16.0
    setuptools>=59.0.1

tests_require =
    mock
    pytest

[bdist_wheel]
universal=1
